--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@ description: Complimentary tools for you
 	<section>
 		<div class="container flex">
 			<div class="text">
-				<img src="/images/xchtools-logo-dark.png" class="xchlogo">
+				<a href="#"><img src="/images/xchtools-logo-dark.png" class="xchlogo"></a>
 				<p><strong>Complimentary tools for you</strong><br>A collection of tools to compliment your experience with the Chia blockchain.</p>
 			</div>
 			<div class="image">
-				<img src="/images/xchtools-screenshot.png" alt="Screenshot" class="screenshot" />
+				<a href="#"><img src="/images/xchtools-screenshot.png" alt="Screenshot" class="screenshot" /></a>
 			</div>
 		</div>
 	</section>
@@ -19,11 +19,11 @@ description: Complimentary tools for you
 	<section>
 		<div class="container flex">
 			<div class="text">
-				<img src="/images/xchfarm-logo-dark.png" class="xchlogo">
+				<a href="https://xch.farm"><img src="/images/xchfarm-logo-dark.png" class="xchlogo"></a>
 				<p><strong>Master Chia plotting and farming</strong><br>Learn about Chia farming's core concepts, read step-by-step guides on setting up your Chia farm, calculate potential profitability, and discover valuable tools and strategies for optimizing your farming experience.</p>
 			</div>
 			<div class="image">
-				<img src="/images/xchfarm-screenshot.png" alt="Screenshot" class="screenshot" />
+				<a href="https://xch.farm"><img src="/images/xchfarm-screenshot.png" alt="Screenshot" class="screenshot" /></a>
 			</div>
 		</div>
 	</section>
@@ -31,11 +31,11 @@ description: Complimentary tools for you
 	<section>
 		<div class="container flex">
 			<div class="text">
-				<img src="/images/xchtrade-logo-light.png" class="xchlogo">
+				<a href="https://xch.trade"><img src="/images/xchtrade-logo-light.png" class="xchlogo"></a>
 				<p><strong>Explore CATs</strong><br>Discover different Chia Asset Tokens (CATs) and track prices and trends. Find the best prices and swap directly on decentralized exchanges.</p>
 			</div>
 			<div class="image">
-				<img src="/images/xchtrade-screenshot.png" alt="Screenshot" class="screenshot" />
+				<a href="https://xch.trade"><img src="/images/xchtrade-screenshot.png" alt="Screenshot" class="screenshot" /></a>
 			</div>
 		</div>
 	</section>
@@ -43,11 +43,11 @@ description: Complimentary tools for you
 	<section>
 		<div class="container flex">
 			<div class="text">
-				<img src="/images/xchbuilders-logo-dark.png" class="xchlogo">
+				<a href="https://xch.builders"><img src="/images/xchbuilders-logo-dark.png" class="xchlogo"></a>
 				<p><strong>Recognizing the #builders</strong><br>Monitoring open source development in the Chia ecosystem.</p>
 			</div>
 			<div class="image">
-				<img src="/images/xchbuilders-screenshot.png" alt="Screenshot" class="screenshot" />
+				<a href="https://xch.builders"><img src="/images/xchbuilders-screenshot.png" alt="Screenshot" class="screenshot" /></a>
 			</div>
 		</div>
 	</section>
@@ -56,7 +56,7 @@ description: Complimentary tools for you
 		<div class="container flex">
 			<div class="text">
 				<img src="/images/xchfm-logo-dark.png" class="xchlogo">
-				<p><strong>Farmers Market 2.0</strong><br>Search NFT collections on the Chia Blockchain by traits and rankings to discover the perfect one to own.</p>
+				<p><strong>Farmers Market 2.0</strong><br>Serving all your NFT trading needs.<br><br>Visit <a href="https://farmersmarket.cc">Farmers Market</a> and <a href="https://nftsonchia.com">NFTs on Chia</a> for now.</p>
 			</div>
 			<div class="image">
 				<img src="/images/xchfm-screenshot.jpg" alt="Screenshot" class="screenshot" />
