add hero and fix formatting

--- a/index.html
+++ b/index.html
@@ -4,23 +4,21 @@ description: Complimentary tools for you
 ---
 
 <div class="content">
-	<section>
-		<div class="container flex">
-			<div class="text">
-				<a href="#"><img src="/images/xchtools-logo-dark.png" class="xchlogo"></a>
-				<p><strong>Complimentary tools for you</strong><br>A collection of tools to compliment your experience with the Chia blockchain.</p>
-			</div>
-			<div class="image">
-				<a href="#"><img src="/images/xchtools-screenshot.png" alt="Screenshot" class="screenshot" /></a>
+
+	<section class="hero">
+		<div class="text-container">
+			<div>
+				<img src="/images/xchtools-logo-dark.png" class="xchlogo">
+				<p>Complimentary tools for the <a href="https://chia.net" target="_blank">Chia blockchain</a></p>
 			</div>
 		</div>
 	</section>
 
-	<section>
+	<section id="xchfarm">
 		<div class="container flex">
 			<div class="text">
 				<a href="https://xch.farm"><img src="/images/xchfarm-logo-dark.png" class="xchlogo"></a>
-				<p><strong>Master Chia plotting and farming</strong><br>Learn about Chia farming's core concepts, read step-by-step guides on setting up your Chia farm, calculate potential profitability, and discover valuable tools and strategies for optimizing your farming experience.</p>
+				<p><strong>Master Chia plotting and farming</strong><br>Find guides & videos, calculate profitability, and discover tools to maximize your farming experience.</p>
 			</div>
 			<div class="image">
 				<a href="https://xch.farm"><img src="/images/xchfarm-screenshot.png" alt="Screenshot" class="screenshot" /></a>
@@ -28,11 +26,11 @@ description: Complimentary tools for you
 		</div>
 	</section>
 
-	<section>
+	<section id="xchtrade">
 		<div class="container flex">
 			<div class="text">
 				<a href="https://xch.trade"><img src="/images/xchtrade-logo-light.png" class="xchlogo"></a>
-				<p><strong>Explore CATs</strong><br>Discover different Chia Asset Tokens (CATs) and track prices and trends. Find the best prices and swap directly on decentralized exchanges.</p>
+				<p><strong>Explore CATs</strong><br>Discover different Chia Asset Tokens (CATs) and track prices and trends. Find the best prices and swap on decentralized exchanges.</p>
 			</div>
 			<div class="image">
 				<a href="https://xch.trade"><img src="/images/xchtrade-screenshot.png" alt="Screenshot" class="screenshot" /></a>
@@ -40,11 +38,11 @@ description: Complimentary tools for you
 		</div>
 	</section>
 
-	<section>
+	<section id="xchbuilders">
 		<div class="container flex">
 			<div class="text">
 				<a href="https://xch.builders"><img src="/images/xchbuilders-logo-dark.png" class="xchlogo"></a>
-				<p><strong>Recognizing the #builders</strong><br>Monitoring open source development in the Chia ecosystem.</p>
+				<p><strong>Recognizing the #builders</strong><br>Monitor open source development and developer activity in the growing Chia ecosystem.</p>
 			</div>
 			<div class="image">
 				<a href="https://xch.builders"><img src="/images/xchbuilders-screenshot.png" alt="Screenshot" class="screenshot" /></a>
@@ -52,11 +50,11 @@ description: Complimentary tools for you
 		</div>
 	</section>
 
-	<section>
+	<section id="xchfm">
 		<div class="container flex">
 			<div class="text">
 				<img src="/images/xchfm-logo-dark.png" class="xchlogo">
-				<p><strong>Farmers Market 2.0</strong><br>Serving all your NFT trading needs.<br><br>Visit <a href="https://farmersmarket.cc">Farmers Market</a> and <a href="https://nftsonchia.com">NFTs on Chia</a> for now.</p>
+				<p><strong>The Farmers Market evolution</strong><br>Serving all your NFT trading needs, building on the success of <a href="https://farmersmarket.cc">Farmers Market</a> to showcase the power of <a href="https://nftsonchia.com">NFTs on Chia</a>.</p>
 			</div>
 			<div class="image">
 				<img src="/images/xchfm-screenshot.jpg" alt="Screenshot" class="screenshot" />
@@ -64,7 +62,19 @@ description: Complimentary tools for you
 		</div>
 	</section>
 
-	<section>
+	<section id="xchapp">
+		<div class="container flex">
+			<div class="text">
+				<img src="/images/xchapp-logo-dark.png" class="xchlogo">
+				<p><strong>Mobile native for crypto natives</strong><br>All your favorite XCH tools in the palm of your hands.</p>
+			</div>
+			<div class="image">
+				<img src="/images/xchapp-screenshot.jpg" alt="Screenshot" />
+			</div>
+		</div>
+	</section>
+
+	<section id="xchninja">
 		<div class="container flex">
 			<div class="text">
 				<img src="/images/xchninja-logo-dark.png" class="xchlogo">
@@ -75,5 +85,4 @@ description: Complimentary tools for you
 			</div>
 		</div>
 	</section>
-
 </div>
