--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ description: Complimentary tools for you
 		<div class="container flex">
 			<div class="text">
 				<a href="https://xch.farm"><img src="/images/xchfarm-logo-dark.png" class="xchlogo"></a>
-				<p><strong>Master Chia plotting and farming</strong><br>Find guides & videos, calculate profitability, and discover tools to maximize your farming experience.</p>
+				<p><strong>Master Chia Farming</strong><br>Find guides & videos, calculate profitability, and discover tools to maximize your farming experience.</p>
 			</div>
 			<div class="image">
 				<a href="https://xch.farm"><img src="/images/xchfarm-screenshot.png" alt="Screenshot" class="screenshot" /></a>
@@ -42,7 +42,7 @@ description: Complimentary tools for you
 		<div class="container flex">
 			<div class="text">
 				<a href="https://xch.builders"><img src="/images/xchbuilders-logo-dark.png" class="xchlogo"></a>
-				<p><strong>Recognizing the #builders</strong><br>Monitor open source development and developer activity in the growing Chia ecosystem.</p>
+				<p><strong>Recognizing the #Builders</strong><br>Monitor open source development and developer activity in the growing Chia ecosystem.</p>
 			</div>
 			<div class="image">
 				<a href="https://xch.builders"><img src="/images/xchbuilders-screenshot.png" alt="Screenshot" class="screenshot" /></a>
@@ -54,7 +54,7 @@ description: Complimentary tools for you
 		<div class="container flex">
 			<div class="text">
 				<img src="/images/xchfm-logo-dark.png" class="xchlogo">
-				<p><strong>The Farmers Market evolution</strong><br>Serving all your NFT trading needs, building on the success of <a href="https://farmersmarket.cc">Farmers Market</a> to showcase the power of <a href="https://nftsonchia.com">NFTs on Chia</a>.</p>
+				<p><strong>Farmers Market Evolved</strong><br>Serving all your NFT trading needs, building on the success of <a href="https://farmersmarket.cc">Farmers Market</a> to showcase the power of <a href="https://nftsonchia.com">NFTs on Chia</a>.</p>
 			</div>
 			<div class="image">
 				<img src="/images/xchfm-screenshot.jpg" alt="Screenshot" class="screenshot" />
@@ -66,7 +66,7 @@ description: Complimentary tools for you
 		<div class="container flex">
 			<div class="text">
 				<img src="/images/xchapp-logo-dark.png" class="xchlogo">
-				<p><strong>Mobile native for crypto natives</strong><br>All your favorite XCH tools in the palm of your hands.</p>
+				<p><strong>Mobile Native for Crypto Natives</strong><br>All your favorite XCH tools in the palm of your hands.</p>
 			</div>
 			<div class="image">
 				<img src="/images/xchapp-screenshot.jpg" alt="Screenshot" />
